# ZcashLightClientKit

./: .gitmodules  Cargo.toml  Package.resolved  Package.swift  ZcashLightClientKit.podspec
Example/ZcashLightClientSample/: Podfile
Example/ZcashLightClientSample/ZcashLightClientSample/: DemoAppConfig.swift
Example/ZcashLightClientSample/ZcashLightClientSample.xcodeproj/: project.pbxproj
Scripts/: build_librustzcash_xcode.sh  generate_zcashsdk_constants.sh
Sources/ZcashLightClientKit/: ClosureSynchronizer.swift  Initializer.swift  Synchronizer.swift
Sources/ZcashLightClientKit/Block/: CompactBlockProcessor.swift
Sources/ZcashLightClientKit/Constants/: Checkpoint+mainnet.swift  ZcashSDK.swift
Sources/ZcashLightClientKit/DAO/: TransactionDao.swift
Sources/ZcashLightClientKit/Entity/: TransactionEntity.swift
Sources/ZcashLightClientKit/Error/: ZcashErrorCode.swift
Sources/ZcashLightClientKit/Metrics/: SDKMetrics.swift
Sources/ZcashLightClientKit/Repository/: TransactionRepository.swift
Sources/ZcashLightClientKit/Rust/: ZcashKeyDerivationBackend.swift  ZcashRustBackend.swift  ZcashRustBackendWelding.swift
Sources/ZcashLightClientKit/Synchronizer/: ClosureSDKSynchronizer.swift  CombineSDKSynchronizer.swift  Dependencies.swift  SDKSynchronizer.swift
Sources/ZcashLightClientKit/Transaction/: TransactionEncoder.swift  WalletTransactionEncoder.swift
Tests/PerformanceTests/: SynchronizerTests.swift
Tests/TestUtils/: DarkSideWalletService.swift  Tests+Utils.swift
ZcashLightClientKit/Constants/: WalletBirthday+mainnet.swift  ZcashSDK.swift
ZcashLightClientKit/Extensions/: ZcashSDK+extensions.swift
ZcashLightClientKit/Stencil/: WalletBirthday+saplingtree.stencil
rust/src/: lib.rs
(+102 files in other folders)
