[package]
name = "libzcashlc"
version = "0.0.6"
authors = ["Jack Grigg <jack@z.cash>",
            "Francisco Gindre <francisco@z.cash>",
]
edition = "2018"
build = "rust/build.rs"

[dependencies]
failure = "0.1"
ffi_helpers = "0.2"
hex = "0.4"
zcash_client_backend = "0.5"
zcash_client_sqlite = "0.3.0"
zcash_primitives = "0.5"
    
#### Temporary additions: ####################################
bitvec = "0.18"
base58 = "0.1.0"
sha2 = "0.9"
bs58 = { version = "0.3", features = ["check"] }
hdwallet = "0.3.0"
ripemd160 = "0.9"
secp256k1 = "0.19"
time = "0.2"
funty = "=1.1.0"
##############################################################

[dependencies.zcash_proofs]
version = "0.5"
default-features = false
features = ["local-prover"]

[build-dependencies]
cbindgen = "0.14"

[lib]
name = "zcashlc"
path = "rust/src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true

[patch.crates-io]
zcash_client_backend = {git = "https://github.com/Meshbits/librustzcash", rev = "f36f8d41a1a809b41a7240ea157e7f42c2675203" }
zcash_client_sqlite = {git = "https://github.com/Meshbits/librustzcash", rev = "f36f8d41a1a809b41a7240ea157e7f42c2675203" }
zcash_primitives = {git = "https://github.com/Meshbits/librustzcash", rev = "f36f8d41a1a809b41a7240ea157e7f42c2675203" }
zcash_proofs = {git = "https://github.com/Meshbits/librustzcash", rev = "f36f8d41a1a809b41a7240ea157e7f42c2675203" }

[features]
mainnet = ["zcash_client_sqlite/mainnet", "zcash_client_backend/transparent-inputs", "zcash_primitives/transparent-inputs"]
testnet = ["zcash_client_backend/transparent-inputs", "zcash_primitives/transparent-inputs"]